--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Double Range Slider</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <div class="values">
+        <span id="range1">0</span>
+        <span>&dash;</span>
+        <span id="range2">100</span>
+      </div>
+      <div class="container">
+        <div class="slider-track"></div>
+        <input type="range" min="0" max="100" value="30" id="slider-1" />
+        <input type="range" min="0" max="100" value="70" id="slider-2" />
+      </div>
+    </div>
+  </body>
 </html>
