--- a/index.html
+++ b/index.html
@@ -15,9 +15,25 @@
       </div>
       <div class="container">
         <div class="slider-track"></div>
-        <input type="range" min="0" max="100" value="30" id="slider-1" />
-        <input type="range" min="0" max="100" value="70" id="slider-2" />
+        <input
+          type="range"
+          min="0"
+          max="100"
+          value="30"
+          id="slider-1"
+          oninput="slideOne()"
+        />
+        <input
+          type="range"
+          min="0"
+          max="100"
+          value="70"
+          id="slider-2"
+          oninput="slideTwo()"
+        />
       </div>
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
